# inline-agent

./: .env.example  .gitignore  README.md  agents.md  package-lock.json  package.json  pyproject.toml  test-trajectory.ts
.github/workflows/: npm-publish-dev.yml  npm-publish.yml
docs/superpowers/plans/: 2026-07-15-cli-tui-colors.md  2026-07-15-provider-settings-tui.md  2026-07-15-tool-output-retention.md  2026-07-15-user-system-prompt.md  2026-07-16-request-local-tool-call-policy.md
docs/superpowers/specs/: 2026-07-15-cli-tui-colors-design.md  2026-07-15-provider-settings-tui-design.md  2026-07-15-tool-output-retention-design.md  2026-07-15-user-system-prompt-design.md  2026-07-16-context-proxy-wayfinder-design.md  2026-07-16-request-local-tool-call-policy-design.md
src/: agent-events.ts  compact.ts  config.ts  context-projection.ts  http-observer.ts  index.ts  loop.ts  provider.ts  runtime-tool-policy.ts  server.ts  shell.ts  skills.ts  system-prompt.ts  tokenize.ts  trajectory.ts  tui.ts
src/inline_agent/: loop.py  main.py  shell.py
src/tui/: app.ts  chat.ts  settings.ts  theme.ts
test/: agent-events.test.ts  api-context.test.ts  compress-result.test.ts  config.test.ts  http-observer.test.ts  package-bin.test.ts  provider.test.ts  server.test.ts  shell.test.ts  system-prompt.test.ts  trajectory-retention.test.ts  tui-app.test.ts  tui-chat.test.ts  tui-settings.test.ts  tui.test.ts
web/: astro.config.mjs  package.json  tsconfig.json
web/scripts/: dev-stack.mjs
web/src/components/: ContextApp.tsx
web/test/: dev-stack.test.mjs
(+1 files in other folders)
