[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inline-agent"
version = "0.1.0"
description = "Minimal coding agent. One tool: shell."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "openai>=1.0",
    "prompt_toolkit>=3.0",
]

[project.scripts]
inline-agent = "inline_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
